index.css
html, body, .container {
    margin: 0px;
    padding: 0px;
}

body {
    font-size: 20px;
    line-height: 30px;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
    color: #11100e;
}

.container {
    padding-bottom: 20px;
    max-width: 1200px;
    margin: auto;
}

a {
    text-decoration: none;
    font-weight: normal;
    color: blue;
}

a:hover {
    color: darkblue;
}

img {
    height: auto;
}

.me {
    width: 100%;
}

.intro, .projects {
    width: 95%;
    max-width: 800px;
    margin: auto;
}

nav a {
    width: fit-content;
    display: block;
    padding-right: 15px;
}




/*
    INTRO
*/

.intro {
    margin-bottom: 50px;
}

.intro h1 {
    font-size: 4em;
    line-height: 1em;
    margin: 0px;
    padding: 0px;
}

.intro h2 {
    font-size: 2em;
    line-height: 1em;
    margin: 0px;
    padding: 0px;
    font-weight: normal;
}


/*
    ABOUT
*/

.about-short {
    margin: 20px 0px;
}

.more-about, .less-about {
    display: block;
    padding: 5px 10px;
    margin: 30px 0px;
    border-radius: 2px;
    border: 1px solid black;
    background: none;
    cursor: pointer;
}

.about {
    background: #eae5de;
    border-radius: 5px;
    padding: 10px 30px;
}

.about p {
    margin-bottom: 30px;
}

.hide {
    display: none;
}

/*
    PROJECT
*/
.project {
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
    height: fit-content;
}

.project-image, .project-description {
    width: 100%;
    height: auto;
}

.project-image img {
    width: 100%;
    border: 1px solid black;
    border-radius: 5px;
}

.project-description {
    padding-top: 10px;
    padding-left: 30px;
    box-sizing: border-box;
}

.project-description h3,
.project-description h4 {
    font-weight: normal;
    margin: 0px;
    padding: 0px;
}

.project-description h3 {
    font-size: 2em;
}

.project-description h4 {
    font-size: 0.8em;
    font-style: italic;
}

.project-description p {}

.project-description a {
    display: block;
    text-decoration: none;
    padding: 5px 0px;
    box-sizing: border-box;
    width: fit-content;
}


@media only screen and (max-width: 640px) {

    .intro h2 {
        line-height: 1.5em;
    }

    .project {
        flex-direction: column;
        margin-bottom: 40px;
    }

    .project-description {
        padding-left: 0px;
    }
}

